--- a/report/template.html
+++ b/report/template.html
@@ -11,7 +11,7 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-		<title>Placeholder Title</title>
+		<title>{{title}}</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -42,22 +42,19 @@
 
 	</head>
 	<body>
-		<div class="container">
+		<div id="container" class="container">
 			<div class="page-header">
-				<h1>More Placeholder</h1>
-				<p class="lead">From a meeting on some day that ran for some time</p>
+				<h1>{{topic}}</h1>
+				<p class="lead">From {{date_str}} and lasted {{dur_str}}</p>
 			</div>
 
 			<h2>Main Ideas</h2>
 			<ul style="list-style: none;">
-				<li>Main Idea 1</li>
-				<li>Main Idea 2</li>
-				<li>Main Idea 3</li>
+				{{#ideas}}
+				<li><h3>{{.}}</h3></li>
+				{{/ideas}}
 			</ul>
 
-			<br>
-			<br>
-			<br>
 			<div id="chart"></div>
 
 				<h2>People</h2>
@@ -81,19 +78,21 @@
 		<script>
 var graph = new Rickshaw.Graph( {
 	element: document.getElementById("chart"),
-	width: 235,
-	height: 85,
+	width: document.getElementById('container').offsetWidth,
+	height: 200,
 	renderer: 'line',
+	min: -.01,
+	interpolation: 'basis',
 	series: [
 		{
-		data: [ { x: 0, y: 40 }, { x: 1, y: 49 }, { x: 2, y: 38 }, { x: 3, y: 30 }, { x: 4, y: 32 } ],
+		data: [ {{{series1_str}}} ],
 		color: '#ff0000'
 		}, {
-		data: [ { x: 0, y: 49 }, { x: 1, y: 38 }, { x: 2, y: 30 }, { x: 3, y: 32 }, { x: 4, y: 40 } ],
-		color: '#00ff00'
-		}, {
-		data: [ { x: 0, y: 38 }, { x: 1, y: 30 }, { x: 2, y: 32 }, { x: 3, y: 40 }, { x: 4, y: 49 } ],
+		data: [ {{{series2_str}}} ],
 		color: '#0000ff'
+		}, {
+		data: [ {{{series3_str}}} ],
+		color: '#00ff00'
 		}
 		]
 } );
